kube/settings/rails.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rails-docker-sample
  name: rails
spec:
  selector:
    app: rails
  type: ClusterIP
  ports:
  - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rails-docker-sample
  name: rails
spec:
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: "takeokunn/rails-sandbox-web:latest"
        imagePullPolicy: Always
        command: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
        ports:
        - containerPort: 3000
